# zq

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/tmp/: build-coverage.yml
.github/workflows/: build-all.yml  build-coverage.yml
cmake/: brew-gcc-toolchain.cmake  brew-gcc-vcpkg.cmake  clang-tools.cmake  cmake-plugins.cmake  codiax-vcpkg.cmake  default_coverage.cmake  default_flags.cmake  default_libs.cmake  default_warnings.cmake  gcc-13-toolchain.cmake  gcc-13-vcpkg.cmake  gcc13-toolchain.cmake  gcc13-triplet.cmake  gcc14-toolchain.cmake  gcc14-triplet.cmake  setup_compiler.cmake  simpletargets.cmake  testing.cmake  x64-osx-gcc.cmake  zqConfig.cmake.in
cmake/add-on/: fetch-dependencies.cmake
cmake/lib/: testing.cmake
cmake/preset/: base.json
cmake/toolchain/: use-vcpkg.cmake
doc/: launch.json
include/zq/: config.hpp  context.hpp  error.hpp  error_fmt.hpp  message.hpp  message_proto.hpp  socket.hpp  zflags.hpp  zq.hpp
proto/: CMakeLists.txt  pingpong.proto
src/: CMakeLists.txt  example_c.cpp  example_c_client.cpp  example_c_server.cpp
tests/: CMakeLists.txt  template.cpp  test_main.cpp  zq_testing.hpp
tests/base/: context_test.cpp  err_test.cpp  simple_msg_test.cpp
tests/commu/: hello_proto_test.cpp  hello_test.cpp  pub_sub_test.cpp  typedmessage_proto_test.cpp  typedmessage_test.cpp
tests/ctx0/: ztx0_test.cpp
tests/fail/commu/: hello_test.cpp  message_test.cpp  msg_test.cpp
tests/proto/: base.cpp
tests/xtend/: empty_message_test.cpp  multipoll_test.cpp  rec_v_n_test.cpp
tests/xtra/: raise_coverate_test.cpp  structs_test.cpp  tuple_test.cpp
